k8s/prod/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: neptunefriend-api
  namespace: neptune-prod
  labels:
    app: neptunefriend-api
    project: neptunefriend
spec:
  selector:
    app: neptunefriend-api
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: neptunefriend-web
  namespace: neptune-prod
  labels:
    app: neptunefriend-web
    project: neptunefriend
spec:
  selector:
    app: neptunefriend-web
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
